# maf-a2a

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.cross-test.yaml  docker-compose.with-graphiti.yaml  docker-compose.yaml  pyproject.toml
deploy/: README.md
src/maf_a2a/: agents.yaml  config.py  middleware.py  pipeline.py  server.py
tests/: conftest.py  test_config.py  test_middleware.py  test_pipeline.py  test_server.py
tests/cross-framework/: Dockerfile  test_cross.py
