[project]
name = "maf-a2a"
version = "0.1.0"
description = "Microsoft Agent Framework agent with A2A protocol interop"
requires-python = ">=3.10"
dependencies = [
    "agent-framework-core>=1.0.0b0",
    "a2a-sdk>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
    "openai>=1.50.0",
    "pyyaml>=6.0",
    "agent-framework-openai>=1.0.0b0",
    "sse-starlette>=3.4.3",
    "protobuf>=5.0,<6",
]

[project.optional-dependencies]
graphiti = [
    "graphiti-core>=0.29.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--ignore=tests/cross-framework"

[tool.uv]
prerelease = "allow"
